--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".payment.PaidActivity"
+            android:exported="false" />
+        <activity
             android:name=".order.OrderDetailActivity"
             android:exported="false" />
         <activity
@@ -20,6 +23,7 @@
             android:exported="false" />
         <activity
             android:name=".home.HomeActivity"
+            android:launchMode="singleTask"
             android:exported="false" />
         <activity
             android:name=".register.RegisterActivity"
