update : register / cafe / korean / chicken

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,30 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".order.korean.KoreanDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".order.korean.KoreanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".order.chicken.ChickenDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".order.chicken.ChickenActivity"
+            android:exported="false" />
+        <activity
             android:name=".payment.PaidActivity"
             android:exported="false" />
         <activity
-            android:name=".order.OrderDetailActivity"
+            android:name=".order.cafe.CafeDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".order.OrderActivity"
+            android:name=".order.cafe.CafeActivity"
             android:exported="false" />
         <activity
             android:name=".home.HomeActivity"
-            android:launchMode="singleTask"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTask" />
         <activity
             android:name=".register.RegisterActivity"
             android:exported="false" />
